--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "main.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "mocha -r ts-node/register src/**/*.spec.ts",
         "start": "electron ./dist/main.js",
         "build:react": "webpack --mode development --config webpack.react.config.js",
         "build": "webpack --mode development"
@@ -20,12 +20,19 @@
         "@babel/preset-env": "^7.5.5",
         "@babel/preset-react": "^7.0.0",
         "@babel/preset-typescript": "^7.3.3",
+        "@types/chai": "^4.2.0",
+        "@types/electron-devtools-installer": "^2.2.0",
+        "@types/mocha": "^5.2.7",
         "@types/react": "^16.9.1",
         "@types/react-dom": "^16.8.5",
         "babel-loader": "^8.0.6",
+        "chai": "^4.2.0",
         "electron": "^6.0.2",
+        "electron-devtools-installer": "^2.2.4",
         "html-webpack-plugin": "^3.2.0",
+        "mocha": "^6.2.0",
         "prettier": "^1.18.2",
+        "ts-node": "^8.3.0",
         "tslint": "^5.18.0",
         "typescript": "^3.5.3",
         "webpack": "^4.39.2",
